--- a/PaiPaiGO/Views/CC_Members/ForgotPassword.cshtml
+++ b/PaiPaiGO/Views/CC_Members/ForgotPassword.cshtml
@@ -3,6 +3,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="~/jQuery-TWzipcode-master/jquery.twzipcode.js"></script>
 <script src="~/jQuery-TWzipcode-master/twzipcode.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <div class="row">
     <div class="col-lg-2 col-1"></div>
@@ -37,67 +38,34 @@
     </div>
 </div>
 
-@*帳號狀態異常*@
-<div class="modal fade" id="loginFailureModal" tabindex="-1" role="dialog" aria-labelledby="loginFailureModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="loginFailureModalLabel">發送驗證郵件失敗</h5>
-            </div>
-            <div class="modal-body">
-                <p>您的帳號狀態有異常，請來信詢問<a href="mailto:paipaigo001@@gmail.com">客服</a>。</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="loginFailureModal2" tabindex="-1" role="dialog" aria-labelledby="loginFailureModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="loginFailureModalLabel2">發送驗證郵件失敗</h5>
-            </div>
-            <div class="modal-body">
-                <p>Email地址不正確，請檢查您的Email地址並再試一次。</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="loginFailureModal3" tabindex="-1" role="dialog" aria-labelledby="loginFailureModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="loginFailureModalLabel3">已發送驗證郵件</h5>
-            </div>
-            <div class="modal-body">
-                <p>驗證郵件已發送至您的Email地址，請登入Email確認後即可開始重設密碼。</p>
-            </div>
-        </div>
-    </div>
-</div>
-
 @if (ViewBag.Status == "異常") {
     <script>
-        $(document).ready(function () {
-            $('#loginFailureModal').modal('show');
-        @*顯示 Modal*@
-        });
+        Swal.fire({
+            icon: 'error',
+            title: '發送驗證郵件失敗',
+            text: '您的帳號狀態有異常，請來信詢問<a href="mailto:paipaigo001@@gmail.com">客服</a>。',
+        })
     </script>
 }
 else if (ViewBag.Status == "空的") {
     <script>
-        $(document).ready(function () {
-            $('#loginFailureModal2').modal('show');
-        @*顯示 Modal*@
-        });
+        Swal.fire({
+            icon: 'error',
+            title: '發送驗證郵件失敗',
+            text: 'Email地址不正確，請檢查您的Email地址並再試一次。',
+            timer: 2000,
+            timerProgressBar: true,
+        })
     </script>
 }
 else if (ViewBag.Status == "正常") {
     <script>
-        $(document).ready(function () {
-            $('#loginFailureModal3').modal('show');
-        @*顯示 Modal*@
-                });
+        Swal.fire({
+            icon: 'success',
+            title: '已發送驗證郵件',
+            text: '驗證郵件已發送至您的Email地址，請登入Email確認後即可開始重設密碼。',
+            timer: 2000,
+            timerProgressBar: true,
+        })
     </script>
 }
