--- a/PaiPaiGO/Views/CC_Members/Resgister.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Resgister.cshtml
@@ -4,6 +4,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="~/jQuery-TWzipcode-master/jquery.twzipcode.js"></script>
 <script src="~/jQuery-TWzipcode-master/twzipcode.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <div class="row">
     <div class="col-lg-2 col-1"></div>
@@ -69,25 +70,6 @@
         </div>
     </div>
 </div>
-
-@*更改成功通知*@
-<div class="modal fade" id="RegistrationModal" tabindex="-1" role="dialog" aria-labelledby="loginFailureModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">註冊會員成功</h5>
-            </div>
-            <div class="modal-body">
-                <div class="text-center rounded ">
-                    <span class="fs-5">驗證郵件已發送至您的Email地址，請登入Email確認後即可完成註冊</span>
-                    <br /><br />
-                    <a class="fs-5" id="countdown" href="/CC_Members/Login">網頁將自動跳轉至登入頁面，若沒有跳轉請點擊此連結</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 <script>
 
@@ -242,12 +224,14 @@
 
 @if (ViewBag.RegistrationSuccess == "Success") {
     <script>
-        $(document).ready(function () {
-            $('#RegistrationModal').modal('show');
-        @*顯示 Modal*@
-                                                });
-        @*// 倒計時*@
-                                                var secondsRemaining = 5;
+    Swal.fire({
+        icon: 'success',
+        title: '註冊會員成功',
+        text: '驗證郵件已發送至您的Email地址，請登入Email確認後即可完成註冊',
+        showConfirmButton:false,
+        footer: '<a id="countdown" href="/CC_Members/Login">網頁將自動跳轉至登入頁面，若沒有跳轉請點擊此連結</a>'
+    })
+        var secondsRemaining = 7;
         var countdownInterval = setInterval(function () {
             secondsRemaining--;
             if (secondsRemaining <= 0) {
@@ -257,3 +241,5 @@
         }, 1000);
     </script>
 }
+
+
