--- a/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
+++ b/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="~/css/CC_members.css" />
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <div class="row">
     <div class="col-lg-2 col-1"></div>
@@ -47,25 +48,10 @@
                 <button class="rounded mt-3 border-0 w-100  bg-info fs-5" type="submit">確認修改</button>
             </form>
         </div>
-                錯誤訊息: @Html.ValidationSummary()
+                @*錯誤訊息: @Html.ValidationSummary()*@
     </div>
 </div>
 
-@*更改成功通知*@
-<div class="modal fade" id="SetFailureModal" tabindex="-1" role="dialog" aria-labelledby="loginFailureModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="loginFailureModalLabel2">密碼已重設成功</h5>
-            </div>
-            <div class="modal-body">
-                <div class="text-center rounded ">
-                    <a class="fs-5" id="countdown" href="/CC_Members/Login">密碼已重設成功，網頁將自動跳轉至登入頁面，若沒有跳轉請點擊此連結</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <script>
     //密碼驗證
     $("#inputpassword2").blur(function () {
@@ -85,12 +71,13 @@
 
 @if (ViewBag.Set == "更改成功") {
     <script>
-        $(document).ready(function () {
-            $('#SetFailureModal').modal('show');
-        @*顯示 Modal*@
-                        });
-        @*// 倒計時*@
-                        var secondsRemaining = 5;
+        Swal.fire({
+            icon: 'success',
+            title: '密碼已重設成功',
+            showConfirmButton: false,
+            footer: '<a id="countdown" href="/CC_Members/Login">網頁將自動跳轉至登入頁面，若沒有跳轉請點擊此連結</a>'
+        })
+        var secondsRemaining = 5;
         var countdownInterval = setInterval(function () {
             secondsRemaining--;
             if (secondsRemaining <= 0) {
