1018_1700下課 1.按鈕加特效ㄌ 2.但是跳出通知的顏色改不過來

--- a/PaiPaiGO/Views/CC_Members/ForgotPassword.cshtml
+++ b/PaiPaiGO/Views/CC_Members/ForgotPassword.cshtml
@@ -32,7 +32,8 @@
                 </div>
                 <br>
                 <!-- 寄出按鈕 -->
-                <button class="rounded mt-3 border-0 w-100  bg-info fs-5" type="submit">發送驗證郵件</button>
+@*                <button class="rounded mt-3 border-0 w-100  bg-info fs-5" type="submit">發送驗證郵件</button>*@
+                <button class="CCbtn_submit rounded mt-3 border-0 w-100 fs-5" type="submit"><span>發送驗證郵件</span></button>
             </form>
         </div>
     </div>
