--- a/PaiPaiGO/Views/CC_Members/MemberProfile.cshtml
+++ b/PaiPaiGO/Views/CC_Members/MemberProfile.cshtml
@@ -85,7 +85,8 @@
             </div>
 			
 			<!-- SEND -->
-            <button class="rounded mt-3 border-0 w-100 fs-5" style="background-color:deepskyblue;" type="submit">確認修改會員資料</button>
+            @*<button class="rounded mt-3 border-0 w-100 fs-5" style="background-color:deepskyblue;" type="submit">確認修改會員資料</button>*@
+            <button class="CCbtn_submit rounded mt-3 border-0 w-100 fs-5" type="submit"><span>確認修改會員資料</span></button>
         </form>
     </div>
     @*錯誤訊息: @Html.ValidationSummary()*@
