--- a/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
+++ b/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
@@ -45,7 +45,8 @@
                     <input asp-for="MemberStatus" value="@ViewBag.Status" />
                 </div>
                 <!-- 寄出按鈕 -->
-                <button class="rounded mt-3 border-0 w-100  bg-info fs-5" type="submit">確認修改</button>
+                @*<button class="rounded mt-3 border-0 w-100  bg-info fs-5" type="submit">確認修改</button>*@
+                <button class="CCbtn_submit rounded mt-3 border-0 w-100 fs-5" type="submit"><span>確認修改</span></button>
             </form>
         </div>
                 @*錯誤訊息: @Html.ValidationSummary()*@
