1019_09:10 SweetAlert 2通知按鈕顏色修改成功

--- a/PaiPaiGO/Views/CC_Members/ForgotPassword.cshtml
+++ b/PaiPaiGO/Views/CC_Members/ForgotPassword.cshtml
@@ -45,6 +45,7 @@
             icon: 'error',
             title: '發送驗證郵件失敗',
             text: '您的帳號狀態有異常，請來信詢問<a href="mailto:paipaigo001@@gmail.com">客服</a>。',
+            confirmButtonColor: '#00acee',
         })
     </script>
 }
@@ -56,6 +57,7 @@ else if (ViewBag.Status == "空的") {
             text: 'Email地址不正確，請檢查您的Email地址並再試一次。',
             timer: 2000,
             timerProgressBar: true,
+            confirmButtonColor: '#00acee',
         })
     </script>
 }
@@ -67,6 +69,7 @@ else if (ViewBag.Status == "正常") {
             text: '驗證郵件已發送至您的Email地址，請登入Email確認後即可開始重設密碼。',
             timer: 2000,
             timerProgressBar: true,
+            confirmButtonColor: '#00acee',
         })
     </script>
 }
