--- a/PaiPaiGO/Views/CC_Members/Resgister.cshtml
+++ b/PaiPaiGO/Views/CC_Members/Resgister.cshtml
@@ -231,6 +231,7 @@
         text: '驗證郵件已發送至您的Email地址，請登入Email確認後即可完成註冊',
         showConfirmButton:false,
         footer: '<a id="countdown" href="/CC_Members/Login">網頁將自動跳轉至登入頁面，若沒有跳轉請點擊此連結</a>'
+        confirmButtonColor: '#00acee',
     })
         var secondsRemaining = 7;
         var countdownInterval = setInterval(function () {
