--- a/PaiPaiGO/Views/CC_Members/MemberProfile.cshtml
+++ b/PaiPaiGO/Views/CC_Members/MemberProfile.cshtml
@@ -195,6 +195,7 @@
             title: '會員資料修改成功',
             timer: 2000,
             timerProgressBar: true,
+            confirmButtonColor: '#00acee',
         })
 	</script>
 }
@@ -206,6 +207,7 @@ else if (@ViewBag.Change == "修改失敗"){
         text: '請檢查您輸入的資料並再試一次。',
         timer: 2000,
         timerProgressBar: true,
+        confirmButtonColor: '#00acee',
     })
     </script>
 }
