--- a/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
+++ b/PaiPaiGO/Views/CC_Members/SetPassword.cshtml
@@ -77,6 +77,7 @@
             title: '密碼已重設成功',
             showConfirmButton: false,
             footer: '<a id="countdown" href="/CC_Members/Login">網頁將自動跳轉至登入頁面，若沒有跳轉請點擊此連結</a>'
+            confirmButtonColor: '#00acee',
         })
         var secondsRemaining = 5;
         var countdownInterval = setInterval(function () {
